--- a/tasks/users.yml
+++ b/tasks/users.yml
@@ -1,15 +1,16 @@
 # tasks file for wordpress, users
 ---
-- name: create (data) directory
+- name: users | create (data) directory
   file:
     path: "{{ wordpress_data_path }}"
     state: directory
     owner: root
     group: root
     mode: 0755
-  tags: [configuration, wordpress, wordpress-users]
+  tags:
+    - wordpress-users-create-data-directory
 
-- name: copy file (users)
+- name: users | copy file
   copy:
     src: "{{ item.users.src }}"
     dest: "{{ wordpress_data_path }}/{{ item.dbname }}.csv"
@@ -19,12 +20,14 @@
   register: check_copy_users
   with_items: wordpress_installs
   when: item.users.src is defined
-  tags: [configuration, wordpress, wordpress-users]
+  tags:
+    - wordpress-users-copy-file
 
-- name: install (users)
-  shell: "wp-cli --allow-root --no-color --path='{{ item.item.path }}' user import-csv {{ wordpress_data_path }}/{{ item.item.dbname }}.csv {{ '--skip-update' if item.item.users.skip_update | default(true) else '' }} --send-email"
+- name: users | install
+  command: "wp-cli --allow-root --no-color --path='{{ item.item.path }}' user import-csv {{ wordpress_data_path }}/{{ item.item.dbname }}.csv {{ '--skip-update' if item.item.users.skip_update | default(true) else '' }} --send-email"
   register: check_installation_users
   changed_when: "'Success' in check_installation_users.stdout"
   with_items: check_copy_users.results
   when: check_copy_users is defined and item.changed
-  tags: [configuration, wordpress, wordpress-users]
+  tags:
+    - wordpress-users-import-file
