--- a/tasks/plugins.yml
+++ b/tasks/plugins.yml
@@ -1,32 +1,35 @@
 # tasks file for wordpress, plugins
 ---
-- name: identify installation (plugin)
+- name: plugins | identify installation
   command: "wp-cli --allow-root --no-color --path='{{ item.0.path }}' plugin is-installed {{ item.1.name }}"
   register: check_installation_plugins
-  failed_when: False
-  changed_when: False
+  failed_when: false
+  changed_when: false
   with_subelements:
     - wordpress_installs
     - plugins
   when: item.1
-  tags: [configuration, wordpress, wordpress-plugins, wordpress-is-installed-plugin]
+  tags:
+    - wordpress-plugins-is-installed-plugin
 
-- name: install (plugin)
+- name: plugins | install
   command: "wp-cli --allow-root --no-color --path='{{ item.item.0.path }}' plugin install {{ item.item.1.name }}"
   with_items: check_installation_plugins.results
   when: check_installation_plugins is defined and item.item.1.name and item.rc != 0
-  tags: [configuration, wordpress, wordpress-plugins, wordpress-install-plugin]
+  tags:
+    - wordpress-plugins-install-plugin
 
-- name: check install (plugin)
+- name: plugins | check install
   command: "wp-cli --allow-root --no-color --path='{{ item.0.path }}' plugin is-installed {{ item.1.name }}"
-  changed_when: False
+  changed_when: false
   with_subelements:
     - wordpress_installs
     - plugins
   when: item.1.name
-  tags: [configuration, wordpress, wordpress-plugins, wordpress-install-plugin-check]
+  tags:
+    - wordpress-plugins-check-install-plugin
 
-- name: activate (plugin)
+- name: plugins | activate
   command: "wp-cli --allow-root --no-color --path='{{ item.0.path }}' plugin activate {{ item.1.name }}"
   register: check_activate_plugin
   changed_when: "'Success: Plugin' in check_activate_plugin.stdout"
@@ -34,9 +37,10 @@
     - wordpress_installs
     - plugins
   when: item.1.name and item.1.activate | default(true)
-  tags: [configuration, wordpress, wordpress-plugins, wordpress-activate-plugin]
+  tags:
+    - wordpress-plugins-activate-plugin
 
-- name: deactivate (plugin)
+- name: plugins | deactivate
   command: "wp-cli --allow-root --no-color --path='{{ item.0.path }}' plugin deactivate {{ item.1.name }}"
   register: check_activate_plugin
   changed_when: "'Success: Plugin' in check_activate_plugin.stdout"
@@ -44,4 +48,5 @@
     - wordpress_installs
     - plugins
   when: item.1.name and not item.1.activate | default(true)
-  tags: [configuration, wordpress, wordpress-plugins, wordpress-deactivate-plugin]
+  tags:
+    - wordpress-plugins-deactivate-plugin
