--- a/tasks/wp-cli.yml
+++ b/tasks/wp-cli.yml
@@ -1,6 +1,6 @@
 # tasks file for wordpress, wp-cli
 ---
-- name: install (wp-cli)
+- name: wp-cli | install
   get_url:
     url: https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
     dest: "{{ wordpress_wp_cli_install_dir }}/wp-cli"
@@ -8,11 +8,13 @@
     owner: root
     group: root
     mode: 0755
-  tags: [configuration, wordpress, wordpress-wp-cli, wordpress-wp-cli-install]
+  tags:
+    - wordpress-wp-cli-install
 
-- name: check (wp-cli)
+- name: wp-cli | check
   command: "wp-cli --allow-root --no-color --info"
   register: check_info
   failed_when: "'WP-CLI' not in check_info.stdout"
-  changed_when: False
-  tags: [configuration, wordpress, wordpress-wp-cli, wordpress-wp-cli-check]
+  changed_when: false
+  tags:
+    - wordpress-wp-cli-check
