--- a/tasks/options.yml
+++ b/tasks/options.yml
@@ -10,7 +10,7 @@
     - options
   when: item.1.command == 'add'
   tags:
-    wordpress-options-add
+    - wordpress-options-add
 
 - name: update options
   command: "wp-cli --allow-root --no-color --path='{{ item.0.path }}' option {{ item.1.command }} '{{ item.1.name }}' '{{ item.1.value }}'"
@@ -21,7 +21,7 @@
     - options
   when: item.1.command == 'update'
   tags:
-    wordpress-options-update
+    - wordpress-options-update
 
 - name: delete options
   command: "wp-cli --allow-root --no-color --path='{{ item.0.path }}' option {{ item.1.command }} '{{ item.1.name }}'"
@@ -33,4 +33,4 @@
     - options
   when: item.1.command == 'delete'
   tags:
-    wordpress-options-delete
+    -   wordpress-options-delete
