--- a/tests/vagrant.yml
+++ b/tests/vagrant.yml
@@ -47,7 +47,5 @@
           - command: delete
             name: testtesttest
             value: 'not existing'
-        db_files:
-          - '../files/queries.sql'
-        db_queries:
+        queries:
           - 'SELECT 1'
