--- a/.travis.yml
+++ b/.travis.yml
@@ -38,18 +38,6 @@ env:
   - ANSIBLE_VERSION=1.6.10
   - ANSIBLE_VERSION=1.6.1
   - ANSIBLE_VERSION=1.6
-  - ANSIBLE_VERSION=1.5.5
-  - ANSIBLE_VERSION=1.5.4
-  - ANSIBLE_VERSION=1.5.3
-  - ANSIBLE_VERSION=1.5.2
-  - ANSIBLE_VERSION=1.5.1
-  - ANSIBLE_VERSION=1.5
-  - ANSIBLE_VERSION=1.4.5
-  - ANSIBLE_VERSION=1.4.4
-  - ANSIBLE_VERSION=1.4.3
-  - ANSIBLE_VERSION=1.4.2
-  - ANSIBLE_VERSION=1.4.1
-  - ANSIBLE_VERSION=1.4
 
 branches:
   only:
@@ -60,13 +48,6 @@ matrix:
     # See https://github.com/ansible/ansible/issues/8233
     - env: ANSIBLE_VERSION=1.6.8
     - env: ANSIBLE_VERSION=1.6.7
-    # See https://github.com/ansible/ansible/issues/6412
-    #     https://github.com/ansible/ansible/issues/6474
-    - env: ANSIBLE_VERSION=1.5.5
-    - env: ANSIBLE_VERSION=1.5.4
-    - env: ANSIBLE_VERSION=1.5.3
-    - env: ANSIBLE_VERSION=1.5.2
-    - env: ANSIBLE_VERSION=1.5.1
 
 before_install:
   - sudo apt-get update -qq
@@ -86,7 +67,7 @@ before_install:
 
 install:
   # Install Ansible.
-  - if [ "$ANSIBLE_VERSION" = "latest" ]; then pip install ansible; else pip install ansible==$ANSIBLE_VERSION; fi
+  - if [ "$ANSIBLE_VERSION" = "latest" ]; then pip install --no-binary ansible ansible; else pip install --no-binary ansible ansible==$ANSIBLE_VERSION; fi
 
 script:
   # Check the role/playbook's syntax.
