--- a/tasks/plugins.yml
+++ b/tasks/plugins.yml
@@ -6,7 +6,7 @@
   failed_when: false
   changed_when: false
   with_subelements:
-    - wordpress_installs
+    - "{{ wordpress_installs }}"
     - plugins
   when: item.1
   tags:
@@ -14,7 +14,7 @@
 
 - name: plugins | install
   command: "wp-cli --allow-root --no-color --path='{{ item.item.0.path }}' plugin install {{ item.item.1.name }}"
-  with_items: check_installation_plugins.results
+  with_items: "{{ check_installation_plugins.results }}"
   when: check_installation_plugins is defined and item.item.1.name and item.rc != 0
   tags:
     - wordpress-plugins-install-plugin
@@ -23,7 +23,7 @@
   command: "wp-cli --allow-root --no-color --path='{{ item.0.path }}' plugin is-installed {{ item.1.name }}"
   changed_when: false
   with_subelements:
-    - wordpress_installs
+    - "{{ wordpress_installs }}"
     - plugins
   when: item.1.name
   tags:
@@ -34,7 +34,7 @@
   register: check_activate_plugin
   changed_when: "'Success: Plugin' in check_activate_plugin.stdout"
   with_subelements:
-    - wordpress_installs
+    - "{{ wordpress_installs }}"
     - plugins
   when: item.1.name and item.1.activate | default(true)
   tags:
@@ -45,7 +45,7 @@
   register: check_activate_plugin
   changed_when: "'Success: Plugin' in check_activate_plugin.stdout"
   with_subelements:
-    - wordpress_installs
+    - "{{ wordpress_installs }}"
     - plugins
   when: item.1.name and not item.1.activate | default(true)
   tags:
