--- a/tasks/themes.yml
+++ b/tasks/themes.yml
@@ -6,7 +6,7 @@
   failed_when: false
   changed_when: false
   with_subelements:
-    - wordpress_installs
+    - "{{ wordpress_installs }}"
     - themes
   when: item.1.name
   tags:
@@ -14,7 +14,7 @@
 
 - name: themes | install
   command: "wp-cli --allow-root --no-color --path='{{ item.item.0.path }}' theme install {{ item.item.1.name }}"
-  with_items: check_installation_themes.results
+  with_items: "{{ check_installation_themes.results }}"
   when: check_installation_themes is defined and item.item.1.name and item.rc != 0
   tags:
     - wordpress-themes-install-theme
@@ -23,7 +23,7 @@
   command: "wp-cli --allow-root --no-color --path='{{ item.0.path }}' theme is-installed {{ item.1.name }}"
   changed_when: false
   with_subelements:
-    - wordpress_installs
+    - "{{ wordpress_installs }}"
     - themes
   when: item.1.name
   tags:
@@ -34,7 +34,7 @@
   register: check_activate_theme
   changed_when: "'Success: Switched to' in check_activate_theme.stdout"
   with_subelements:
-    - wordpress_installs
+    - "{{ wordpress_installs }}"
     - themes
   when: item.1.name and item.1.activate | default(false)
   tags:
