--- a/tasks/themes.yml
+++ b/tasks/themes.yml
@@ -14,8 +14,8 @@
 
 - name: themes | install
   command: "wp-cli --allow-root --no-color --path='{{ item.item.0.path }}' theme install {{ item.item.1.name }}"
-  with_items: "{{ check_installation_themes.results }}"
-  when: check_installation_themes is defined and item.item.1.name and item.rc != 0
+  with_items: "{{ check_installation_themes.results | default([]) }}"
+  when: item.item.1.name and item.rc != 0
   tags:
     - wordpress-themes-install-theme
 
