--- a/tasks/users.yml
+++ b/tasks/users.yml
@@ -27,7 +27,7 @@
   command: "wp-cli --allow-root --no-color --path='{{ item.item.path }}' user import-csv {{ wordpress_data_path }}/{{ item.item.dbname }}.csv {{ '--skip-update' if item.item.users.skip_update | default(true) else '' }} --send-email"
   register: check_installation_users
   changed_when: "'Success' in check_installation_users.stdout"
-  with_items: "{{ check_copy_users.results }}"
-  when: check_copy_users is defined and item.changed
+  with_items: "{{ check_copy_users.results | default([]) }}"
+  when: item.changed
   tags:
     - wordpress-users-import-file
