Make it possible to replace WordPress Cron with a Real Cron Job

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -12,6 +12,12 @@
     - wordpress
     - wordpress-core
 
+- include: wp-cron.yml
+  tags:
+    - configuration
+    - wordpress
+    - wordpress-wp-cron
+
 - include: themes.yml
   tags:
     - configuration
