--- a/tests/test.yml
+++ b/tests/test.yml
@@ -18,6 +18,8 @@
         admin_name: admin
         admin_email: root@localhost.localdomain
         admin_password: 'tuFr8=aPra@a'
+        cron:
+          use_crond: true
         themes:
           - name: twentytwelve
             activate: true
