--- a/tasks/options.yml
+++ b/tasks/options.yml
@@ -1,10 +1,13 @@
 # tasks file for wordpress, options
 ---
 - name: add options
-  command: "wp-cli --allow-root --no-color --path='{{ item.0.path }}' option {{ item.1.command }} '{{ item.1.name }}' '{{ item.1.value }}' --autoload={{ 'yes' if item.1.autoload | default(true) else 'no' }}"
-  register: check_installation_options
+  command: >
+    wp-cli option
+    --allow-root --no-color --path='{{ item.0.path }}'
+    {{ item.1.command }} '{{ item.1.name }}' '{{ item.1.value }}' --autoload={{ 'yes' if item.1.autoload | default(true) else 'no' }}
+  register: _check_installation_options
   failed_when: false
-  changed_when: "'Added' in check_installation_options.stdout"
+  changed_when: "'Added' in _check_installation_options.stdout"
   with_subelements:
     - "{{ wordpress_installs }}"
     - options
@@ -13,9 +16,12 @@
     - wordpress-options-add
 
 - name: update options
-  command: "wp-cli --allow-root --no-color --path='{{ item.0.path }}' option {{ item.1.command }} '{{ item.1.name }}' '{{ item.1.value }}'"
-  register: check_installation_options
-  changed_when: "'unchanged' not in check_installation_options.stdout"
+  command: >
+    wp-cli option
+    --allow-root --no-color --path='{{ item.0.path }}'
+    {{ item.1.command }} '{{ item.1.name }}' '{{ item.1.value }}'
+  register: _check_installation_options
+  changed_when: "'unchanged' not in _check_installation_options.stdout"
   with_subelements:
     - "{{ wordpress_installs }}"
     - options
@@ -24,10 +30,13 @@
     - wordpress-options-update
 
 - name: delete options
-  command: "wp-cli --allow-root --no-color --path='{{ item.0.path }}' option {{ item.1.command }} '{{ item.1.name }}'"
-  register: check_installation_options
+  command: >
+    wp-cli option
+    --allow-root --no-color --path='{{ item.0.path }}'
+    {{ item.1.command }} '{{ item.1.name }}'
+  register: _check_installation_options
   failed_when: false
-  changed_when: "'Could not delete' not in check_installation_options.stderr"
+  changed_when: "'Could not delete' not in _check_installation_options.stderr"
   with_subelements:
     - "{{ wordpress_installs }}"
     - options
