--- a/tasks/themes.yml
+++ b/tasks/themes.yml
@@ -1,8 +1,9 @@
 # tasks file for wordpress, themes
 ---
 - name: themes | identify installation
-  command: "wp-cli --allow-root --no-color --path='{{ item.0.path }}' theme is-installed {{ item.1.name }}"
-  register: check_installation_themes
+  command: >
+    wp-cli --allow-root --no-color --path='{{ item.0.path }}' theme is-installed {{ item.1.name }}
+  register: _check_installation_themes
   failed_when: false
   changed_when: false
   with_subelements:
@@ -13,14 +14,16 @@
     - wordpress-themes-is-installed-theme
 
 - name: themes | install
-  command: "wp-cli --allow-root --no-color --path='{{ item.item.0.path }}' theme install {{ item.item.1.name }}"
-  with_items: "{{ check_installation_themes.results | default([]) }}"
+  command: >
+    wp-cli --allow-root --no-color --path='{{ item.item.0.path }}' theme install {{ item.item.1.name }}
+  with_items: "{{ _check_installation_themes.results | default([]) }}"
   when: item.item.1.name and item.rc != 0
   tags:
     - wordpress-themes-install-theme
 
 - name: themes | check install
-  command: "wp-cli --allow-root --no-color --path='{{ item.0.path }}' theme is-installed {{ item.1.name }}"
+  command: >
+    wp-cli --allow-root --no-color --path='{{ item.0.path }}' theme is-installed {{ item.1.name }}
   changed_when: false
   with_subelements:
     - "{{ wordpress_installs }}"
@@ -30,9 +33,10 @@
     - wordpress-themes-install-theme-check
 
 - name: themes | activate
-  command: "wp-cli --allow-root --no-color --path='{{ item.0.path }}' theme activate {{ item.1.name }}"
-  register: check_activate_theme
-  changed_when: "'Success: Switched to' in check_activate_theme.stdout"
+  command: >
+    wp-cli --allow-root --no-color --path='{{ item.0.path }}' theme activate {{ item.1.name }}
+  register: _check_activate_theme
+  changed_when: "'Success: Switched to' in _check_activate_theme.stdout"
   with_subelements:
     - "{{ wordpress_installs }}"
     - themes
