--- a/tests/vagrant.yml
+++ b/tests/vagrant.yml
@@ -48,4 +48,5 @@
             name: testtesttest
             value: 'not existing'
         queries:
-          - 'SELECT 1'
+          - "UPDATE wp_options SET option_value = 0 WHERE option_name = 'comments_notify'"
+          - "INSERT IGNORE INTO wp_options (option_name, option_value) VALUES ('mainwp_child_uniqueId', 'key')"
