--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,11 @@ dist: trusty
 language: python
 python: "2.7"
 
-services:
-  - mysql
-
 env:
   - ANSIBLE_VERSION=latest
+  - ANSIBLE_VERSION=2.2.1.0
   - ANSIBLE_VERSION=2.2.0.0
+  - ANSIBLE_VERSION=2.1.4
   - ANSIBLE_VERSION=2.1.3
   - ANSIBLE_VERSION=2.1.2
   - ANSIBLE_VERSION=2.1.1.0
@@ -21,41 +20,10 @@ env:
   - ANSIBLE_VERSION=2.0.0.1
   - ANSIBLE_VERSION=2.0.0.0
   - ANSIBLE_VERSION=1.9.6
-  - ANSIBLE_VERSION=1.9.5
-  - ANSIBLE_VERSION=1.9.4
-  - ANSIBLE_VERSION=1.9.3
-  - ANSIBLE_VERSION=1.9.2
-  - ANSIBLE_VERSION=1.9.1
-  - ANSIBLE_VERSION=1.9.0.1
-  - ANSIBLE_VERSION=1.8.4
-  - ANSIBLE_VERSION=1.8.3
-  - ANSIBLE_VERSION=1.8.2
-  - ANSIBLE_VERSION=1.8.1
-  - ANSIBLE_VERSION=1.8
-  - ANSIBLE_VERSION=1.7.2
-  - ANSIBLE_VERSION=1.7.1
-  - ANSIBLE_VERSION=1.7
-  - ANSIBLE_VERSION=1.6.9
-  - ANSIBLE_VERSION=1.6.8
-  - ANSIBLE_VERSION=1.6.7
-  - ANSIBLE_VERSION=1.6.6
-  - ANSIBLE_VERSION=1.6.5
-  - ANSIBLE_VERSION=1.6.4
-  - ANSIBLE_VERSION=1.6.3
-  - ANSIBLE_VERSION=1.6.2
-  - ANSIBLE_VERSION=1.6.10
-  - ANSIBLE_VERSION=1.6.1
-  - ANSIBLE_VERSION=1.6
 
 branches:
   only:
     - master
-
-matrix:
-  allow_failures:
-    # See https://github.com/ansible/ansible/issues/8233
-    - env: ANSIBLE_VERSION=1.6.8
-    - env: ANSIBLE_VERSION=1.6.7
 
 before_install:
   - sudo apt-get update -qq
@@ -81,7 +49,8 @@ before_install:
 
 install:
   # Install Ansible.
-  - if [ "$ANSIBLE_VERSION" = "latest" ]; then pip install --no-binary ansible ansible; else pip install --no-binary ansible ansible==$ANSIBLE_VERSION; fi
+  - if [ "$ANSIBLE_VERSION" = "latest" ]; then pip install ansible; else pip install ansible==$ANSIBLE_VERSION; fi
+  - if [ "$ANSIBLE_VERSION" = "latest" ]; then pip install ansible-lint; fi
 
 script:
   # Check the role/playbook's syntax.
@@ -103,6 +72,8 @@ script:
     | grep -q '200 OK'
     && (echo 'Availability test: pass' && exit 0)
     || (echo 'Availability test: fail' && exit 1)
+
+  - if [ "$ANSIBLE_VERSION" = "latest" ]; then ansible-lint tests/test.yml || true; fi
 
 notifications:
   email: false
