Make it possible to install plugins from zip and url

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -12,6 +12,12 @@
     - wordpress
     - wordpress-core
 
+- include: configure.yml
+  tags:
+    - configuration
+    - wordpress
+    - wordpress-configure
+
 - include: wp-cron.yml
   tags:
     - configuration
