Add latest Ansible versions (2.7.8, 2.6.14, and 2.5.15)

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ python: "2.7"
 
 env:
   - ANSIBLE_VERSION=latest
+  - ANSIBLE_VERSION=2.7.8
+  - ANSIBLE_VERSION=2.7.7
   - ANSIBLE_VERSION=2.7.6
   - ANSIBLE_VERSION=2.7.5
   - ANSIBLE_VERSION=2.7.4
@@ -14,6 +16,8 @@ env:
   - ANSIBLE_VERSION=2.7.2
   - ANSIBLE_VERSION=2.7.1
   - ANSIBLE_VERSION=2.7.0
+  - ANSIBLE_VERSION=2.6.14
+  - ANSIBLE_VERSION=2.6.13
   - ANSIBLE_VERSION=2.6.12
   - ANSIBLE_VERSION=2.6.11
   - ANSIBLE_VERSION=2.6.10
@@ -27,6 +31,7 @@ env:
   - ANSIBLE_VERSION=2.6.2
   - ANSIBLE_VERSION=2.6.1
   - ANSIBLE_VERSION=2.6.0
+  - ANSIBLE_VERSION=2.5.15
   - ANSIBLE_VERSION=2.5.14
   - ANSIBLE_VERSION=2.5.13
   - ANSIBLE_VERSION=2.5.12
@@ -99,9 +104,6 @@ script:
 
 notifications:
   email: false
-  hipchat:
-    rooms:
-      secure: mahlR7r5xdCVUfTJf8FbhUH4YazcqXCeMxpMTCrsmMtkZDQMKgAI/7anPStNhCQlVbOicj9uLzLqUKQc5cDb8afApqzswZpJyynv8akZb3+C1/w+ZzudrcEJdI9Mr/vm9f94IJYTLxUyM2IFzXRB2G+cbRmHvl6SalRlAx1/nmc=
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
   slack:
     rooms:
